--- a/backend/.env
+++ b/backend/.env
@@ -5,5 +5,5 @@ CLOUDINARY_NAME = "dwbhix0rn"
 
 JWT_SECRET = "harshu"
 
-ADMIN_EMAIL = "admin@forever.com"
-ADMIN_PASSWORD = "qwert123"
+ADMIN_EMAIL = "admin@dharmadristi.com"
+ADMIN_PASSWORD = "Admin_DharmaDristi"
