Razorpay,cartempty,whishlist

--- a/backend/.env
+++ b/backend/.env
@@ -7,3 +7,6 @@ JWT_SECRET = "harshu"
 
 ADMIN_EMAIL = "admin@dharmadristi.com"
 ADMIN_PASSWORD = "Admin_DharmaDristi"
+
+RAZORPAY_KEY_SECRET = 'QRtR54Si2sxJctONkbn9NTWY'
+RAZORPAY_KEY_ID = 'rzp_live_MFxdbdUoL72Zak'
