--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,3 @@
 VITE_BACKEND_URL=http://localhost:4000
+VITE_RAZORPAY_KEY_ID = 'rzp_live_MFxdbdUoL72Zak'
+VITE_RAZORPAY_KEY_SECRET = 'QRtR54Si2sxJctONkbn9NTWY'
