--- a/backend/.env
+++ b/backend/.env
@@ -10,3 +10,6 @@ ADMIN_PASSWORD = "Admin_DharmaDristi"
 
 RAZORPAY_KEY_SECRET = 'QRtR54Si2sxJctONkbn9NTWY'
 RAZORPAY_KEY_ID = 'rzp_live_MFxdbdUoL72Zak'
+
+SMTP_EMAIL=dwijpatel1000@gmail.com
+SMTP_PASS=wehbajliamvdjzcr
